// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MethodsRenderer should render a table 1`] = `
<Styled(Table)
  columns={
    [
      {
        "caption": "Method name",
        "render": [Function],
      },
      {
        "caption": "Parameters",
        "render": [Function],
      },
      {
        "caption": "Description",
        "render": [Function],
      },
    ]
  }
  getRowKey={[Function]}
  rows={
    [
      {
        "description": "Public",
        "modifiers": [],
        "name": "method",
        "params": [],
      },
    ]
  }
/>
`;

exports[`PropsRenderer should render JsDoc tags 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        Foo()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={[]}
      />
    </div>
    <div>
      <div>
        <JsDoc
          since={
            [
              {
                "description": "1.0.0",
                "title": "since",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render deprecated JsDoc tags 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={true}
      >
        Foo()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={[]}
      />
    </div>
    <div>
      <div>
        <JsDoc
          deprecated={
            [
              {
                "description": "Use *another* method",
                "title": "description",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render parameters 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={
          [
            {
              "description": "Description",
              "name": "value",
              "optional": false,
              "type": {
                "name": "Number",
              },
            },
          ]
        }
      />
    </div>
    <div>
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render public method 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={[]}
      />
    </div>
    <div>
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render returns 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={[]}
      />
    </div>
    <div>
      <div>
        <Styled(Argument)
          block={true}
          description="Description"
          returns={true}
          type={
            {
              "name": "Number",
            }
          }
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;
